--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,6 @@
 name: 'Pull Request'
 
-on:
-  pull_request:
-    branches: [main]
+on: [pull_request]
 
 jobs:
   build:
@@ -21,6 +19,3 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-
-      - name: Test with Maven
-        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
